# Jackpot_Game

./: README.md
Jackpot_program/: README.md  test2.json
Jackpot_program/jackpot/: Anchor.toml  package.json
Jackpot_program/jackpot/cli/: script.ts
Jackpot_program/jackpot/programs/jackpot/: Cargo.toml
Jackpot_program/jackpot/programs/jackpot/src/: account.rs  error.rs  lib.rs  utils.rs
Jackpot_program/jackpot/tests/: jackpot.ts
